[package]
name = "rs-pop3"
version = "1.0.7"
authors = ["Matt McCoy <mattnenterprise@yahoo.com>"]
homepage = "https://github.com/k8scat/rust-pop3"
repository = "https://github.com/k8scat/rust-pop3"
description = "POP3 client for Rust"
readme = "README.md"
license = "MIT"

[lib]
name = "rs_pop3"
path = "src/pop3.rs"

[dependencies]
openssl = "0.10"
regex = "1"
lazy_static = "1"
